--- a/battery.html
+++ b/battery.html
@@ -137,38 +137,38 @@
         <h1>차세대 배터리</h1>    
 
 
-        <a href="battery/battery sub 20240429_09.html" target="_blank"> <h3>2024년04월24일 : Faster Charging and Increased Range? Solid State Batteries for EVs Explained</h3><br><br>
+        <a href="battery/battery sub 20240429_09.html" target="_blank"> <h3>Faster Charging and Increased Range? Solid State Batteries for EVs Explained</h3><br><br>
             <img src="image/battery/battery sub 20240429_09.png" alt="" width="100%">
         </a>
         <br><br><br>
 
-        <a href="battery/battery sub 20240429_06.html" target="_blank"> <h3>2024년04월02일 : 전고체 전지</a></h3>
+        <a href="battery/battery sub 20240429_06.html" target="_blank"> <h3>전고체 전지</a></h3>
         <br><br><br>
 
-        <a href="battery/battery sub 20240429_05.html" target="_blank"> <h3>2024년04월02일 : ‘전고체 배터리’, 더 안전하게 사용하는 방법 찾았다</a></h3>
+        <a href="battery/battery sub 20240429_05.html" target="_blank"> <h3>‘전고체 배터리’, 더 안전하게 사용하는 방법 찾았다</a></h3>
         <br><br><br>
 
-        <a href="battery/battery sub 20240429_08.html" target="_blank"> <h3>2024년03월25일 : '전고체' '리튬황' 차세대 배터리 상용화 어디까지 왔나</h3>
+        <a href="battery/battery sub 20240429_08.html" target="_blank"> <h3>'전고체' '리튬황' 차세대 배터리 상용화 어디까지 왔나</h3>
             <img src="image/battery/battery sub 20240429_08.png" alt="" width="100%">
         </a>
         <br><br><br>
-        <a href="battery/battery sub 20240429_10.html" target="_blank"> <h3>2024년03월12일 : Are solid-state batteries finally ready to live up to the hype?</h3>
+        <a href="battery/battery sub 20240429_10.html" target="_blank"> <h3>Are solid-state batteries finally ready to live up to the hype?</h3>
             <img src="image/battery/battery sub 20240429_10.png" alt="" width="100%">
         </a>
         <br><br><br>
-        <a href="battery/battery sub 20240429_11.html" target="_blank"> <h3>2024년01월26일 : Solid-State Batteries Could Face “Production Hell”</h3>
+        <a href="battery/battery sub 20240429_11.html" target="_blank"> <h3>Solid-State Batteries Could Face “Production Hell”</h3>
             <img src="image/battery/battery sub 20240429_11.png" alt="" width="100%">
         </a>
         <br><br><br>
-        <a href="battery/battery sub 20240429_04.html" target="_blank"> <h3>2023년09월26일 : 국내 2차전지 3사의 미래 먹거리 '전고체 배터리' 어디쯤 왔나</h3>
+        <a href="battery/battery sub 20240429_04.html" target="_blank"> <h3>국내 2차전지 3사의 미래 먹거리 '전고체 배터리' 어디쯤 왔나</h3>
             <img src="image/battery/battery sub 20240429_04.png" alt="" width="100%">
         </a>
         <br><br><br>
-        <a href="battery/battery sub 20240429_03.html" target="_blank"> <h3>2023년07월19일 : 꿈의 배터리냐 거품이냐…투자자 위한 전고체 이야기 </h3>
+        <a href="battery/battery sub 20240429_03.html" target="_blank"> <h3>꿈의 배터리냐 거품이냐…투자자 위한 전고체 이야기 </h3>
             <img src="image/battery/battery sub 20240429_03.png" alt="" width="100%">
         </a>
         <br><br><br>
-        <a href="battery/battery sub 20240429_07.html" target="_blank"> <h3>2023년01월04일 : 한계를 뛰어넘는 차세대 혁신! ‘전고체 배터리</h3><br>
+        <a href="battery/battery sub 20240429_07.html" target="_blank"> <h3>한계를 뛰어넘는 차세대 혁신! ‘전고체 배터리</h3><br>
             <img src="image/battery/battery sub 20240429_07.png" alt="" width="100%">
         </a>
 
