Update brunch sub 20240504_01.html

--- a/brunch/diary/brunch sub 20240504_01.html
+++ b/brunch/diary/brunch sub 20240504_01.html
@@ -133,7 +133,7 @@
         <img src="../../image/brunch/20240504_grad2.jpg" alt="미시간 대학교 졸업식 행사 사진" width="100%">
 
         <video id="myVideo">
-            <source src="../../image/brunch/20240504_grad3.mp4" type="video/mp4">
+            <source src="../../image/brunch/20240504_grad3.mp4" type="video/mp4" width="100%">
             Your browser does not support the video tag.
           </video>
           
