--- a/usa.html
+++ b/usa.html
@@ -25,7 +25,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
             padding: 2rem;
-            font-size: 40px;
+            font-size: 30px;
         }
             @media screen and (max-width: 768px) {
             main {
@@ -156,13 +156,36 @@
                       </strong>
                         <a href="usa/usa sub 20240502_15.html" target="_blank">PWC : 의료비 증가 현황 2024</a> <br><br>
                         <a href="usa/usa sub 20240502_11.html" target="_blank">Gohealthuc : 긴급 진료와 응급실의 차이점</a> <br><br>
-                        <a href="usa/usa sub 20240502_12.html" target="_blank">Scipps : 응급실로 가야 할까요, 아니면 긴급 진료를 받아야 할까요?</a> <br><br>
+                        <a href="usa/usa sub 20240502_12.html" target="_blank">Scipps : 응급실로 가야 할까요, 아니면 긴급 진료를 받아야 할까요?</a> <br><br>                         
+
                         <a href="usa/usa sub 20240502_16.html" target="_blank">CNN : 미국의 의료비 지출은 다른 고소득 국가들에 비해 가장 높지만, 기대수명은 가장 낮다</a> <br><br>
                         <a href="usa/usa sub 20240502_13.html" target="_blank">Carbon Health : 긴급 치료 vs. 워크인 클리닉 vs. 응급실: 어느 것을 선택해야 합니까?</a> <br><br>
-                        <a href="usa/usa sub 20240502_17.html" target="_blank">Southofseoul : 한국과 미국의 1차 의료의 3가지 중요한 차이점</a> <br><br>
-                        <a href="usa/usa sub 20240502_18.html" target="_blank">Harvard Magazine : 미국은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다</a> <br><br>
+
+                        <style>
+                            .highlight-green {
+                              background-color: lightgreen;
+                            }
+                          
+                            .highlight-yellow {
+                              background-color: yellow;
+                            }
+                          </style>
+
+
+                        <a href="usa/usa sub 20240502_17.html" target="_blank">Southofseoul : <mark class="highlight-green">한국</mark>과 미국의 1차 의료의 3가지 중요한 차이점</a> <br><br>
+
+
+
+                        <!-- <style>
+                            .highlight {
+                              background: linear-gradient(to bottom, transparent 60%, yellow 60%);
+                            }
+                          </style> -->
+                        <a href="usa/usa sub 20240502_18.html" target="_blank">Harvard Magazine : <mark class="highlight-yellow">미국</mark>은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다</a> <br><br>
+
+
                         <a href="usa/usa sub 20240502_14.html" target="_blank">Wbur : 미국의 의료 비용이 세계에서 가장 높은 이유는 무엇입니까? '가격이 문제야, 바보야'</a> <br><br>
-                        
+
                 </p>
             </li>
             <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
