--- a/usa.html
+++ b/usa.html
@@ -134,14 +134,14 @@
             <strong>
                    주택구매 <br><br>
                   </strong>
-                    <a href="usa/usa sub 20240502_10.html" target="_blank">BankingRates : 미국 부자들이 점점 더 부자가 되는 25개 도시</a> <br><br>
-                    <a href="usa/usa sub 20240502_02.html" target="_blank">Bankrate : 미국 부동산 수수료 체계 새 규정 7월 발효</a> <br><br>
-                    <a href="usa/usa sub 20240502_01.html" target="_blank">CNN : 미국 부동산 수수료 체계 100년만에 뒤바뀌다</a> <br><br>
-                    <a href="usa/usa sub 20240502_09.html" target="_blank">Studyfinds : 미국에서 가장 부유한 7개 도시</a> <br><br>
-                    <a href="usa/usa sub 20240502_03.html" target="_blank">USA Today : 부동산 수수료가 줄어든다</a> <br><br>
-                    <a href="usa/usa sub 20240502_08.html" target="_blank">Property : 미국에서 가장 부유한 도시 10곳</a> <br><br>
-                    <a href="usa/usa sub 20240502_06.html" target="_blank">ROCKET : 2024년에 가장 저렴한 주 15개</a> <br><br>
-                    <a href="usa/usa sub 20240502_07.html" target="_blank">미국에서 가장 부유한 14개 지역</a> <br><br>
+                    <a href="usa/usa sub 20240502_10.html" target="_blank">BankingRates : 미국 부자들이 점점 더 부자가 되는 25개 도시</a> <br>
+                    <a href="usa/usa sub 20240502_02.html" target="_blank">Bankrate : 미국 부동산 수수료 체계 새 규정 7월 발효</a> <br>
+                    <a href="usa/usa sub 20240502_01.html" target="_blank">CNN : 미국 부동산 수수료 체계 100년만에 뒤바뀌다</a> <br>
+                    <a href="usa/usa sub 20240502_09.html" target="_blank">Studyfinds : 미국에서 가장 부유한 7개 도시</a> <br>
+                    <a href="usa/usa sub 20240502_03.html" target="_blank">USA Today : 부동산 수수료가 줄어든다</a> <br>
+                    <a href="usa/usa sub 20240502_08.html" target="_blank">Property : 미국에서 가장 부유한 도시 10곳</a> <br>
+                    <a href="usa/usa sub 20240502_06.html" target="_blank">ROCKET : 2024년에 가장 저렴한 주 15개</a> <br>
+                    <a href="usa/usa sub 20240502_07.html" target="_blank">미국에서 가장 부유한 14개 지역</a> <br>
                     
             </p>
         </li>
@@ -154,12 +154,11 @@
                 <strong>
                        병원 <br><br>
                       </strong>
-                        <a href="usa/usa sub 20240502_15.html" target="_blank">PWC : 의료비 증가 현황 2024</a> <br><br>
-                        <a href="usa/usa sub 20240502_11.html" target="_blank">Gohealthuc : 긴급 진료와 응급실의 차이점</a> <br><br>
-                        <a href="usa/usa sub 20240502_12.html" target="_blank">Scipps : 응급실로 가야 할까요, 아니면 긴급 진료를 받아야 할까요?</a> <br><br>                         
-
-                        <a href="usa/usa sub 20240502_16.html" target="_blank">CNN : 미국의 의료비 지출은 다른 고소득 국가들에 비해 가장 높지만, 기대수명은 가장 낮다</a> <br><br>
-                        <a href="usa/usa sub 20240502_13.html" target="_blank">Carbon Health : 긴급 치료 vs. 워크인 클리닉 vs. 응급실: 어느 것을 선택해야 합니까?</a> <br><br>
+                        <a href="usa/usa sub 20240502_15.html" target="_blank">PWC : 의료비 증가 현황 2024</a> <br>
+                        <a href="usa/usa sub 20240502_11.html" target="_blank">Gohealthuc : 긴급 진료와 응급실의 차이점</a> <br>
+                        <a href="usa/usa sub 20240502_12.html" target="_blank">Scipps : 응급실로 가야 할까요, 아니면 긴급 진료를 받아야 할까요?</a> <br>
+                        <a href="usa/usa sub 20240502_16.html" target="_blank">CNN : 미국의 의료비 지출은 다른 고소득 국가들에 비해 가장 높지만, 기대수명은 가장 낮다</a> <br>
+                        <a href="usa/usa sub 20240502_13.html" target="_blank">Carbon Health : 긴급 치료 vs. 워크인 클리닉 vs. 응급실: 어느 것을 선택해야 합니까?</a> <br>
 
                         <style>
                             .highlight-green {
@@ -172,7 +171,7 @@
                           </style>
 
 
-                        <a href="usa/usa sub 20240502_17.html" target="_blank">Southofseoul : <mark class="highlight-green">한국</mark>과 미국의 1차 의료의 3가지 중요한 차이점</a> <br><br>
+                        <a href="usa/usa sub 20240502_17.html" target="_blank">Southofseoul : <mark class="highlight-green">한국</mark>과 미국의 1차 의료의 3가지 중요한 차이점</a> <br>
 
 
 
@@ -181,10 +180,10 @@
                               background: linear-gradient(to bottom, transparent 60%, yellow 60%);
                             }
                           </style> -->
-                        <a href="usa/usa sub 20240502_18.html" target="_blank">Harvard Magazine : <mark class="highlight-yellow">미국</mark>은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다</a> <br><br>
+                        <a href="usa/usa sub 20240502_18.html" target="_blank">Harvard Magazine : <mark class="highlight-yellow">미국</mark>은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다</a> <br>
 
 
-                        <a href="usa/usa sub 20240502_14.html" target="_blank">Wbur : 미국의 의료 비용이 세계에서 가장 높은 이유는 무엇입니까? '가격이 문제야, 바보야'</a> <br><br>
+                        <a href="usa/usa sub 20240502_14.html" target="_blank">Wbur : 미국의 의료 비용이 세계에서 가장 높은 이유는 무엇입니까? '가격이 문제야, 바보야'</a> <br>
 
                 </p>
             </li>
