--- a/AI_News.html
+++ b/AI_News.html
@@ -153,7 +153,7 @@
             <strong><h2>1억짜리를 150만원에 '뚝딱'…"중국이 해냈다" 업계 화들짝</h2></strong>
             <br><br>
             <div class="gif-container">
-              <img src="../../image/ai_news/ai news sub 20240428_03/ai news sub 20240505_01.jpg" alt="" width="100%">
+              <img src="../../image/ai_news/ai news sub 20240505_01.jpg" alt="" width="100%">
             </div>
             중국 후베이성 우한시가 세계 최대 자율주행 도시로 떠올랐다. 우한 자율주행 시범지역에는 운전사가 없는 '완전 무인택시'(로보택시)와 단돈 0.01위안(약 2원)만 주면 탈 수 있는 '무인 버스'가 운행 중이다. 우한시는 서울의 14배 크기로, 중국은 이곳을 거대한 미래 기술 실험실로 만들었다. 중국의 자율주행 상용화 속도는 매우 빠르다. 2013년 자율주행 사업을 시작한 바이두 등이 지난해 우한에서 거둔 로보택시 탑승 건수는 73만2000건으로, 2008년 출범한 구글의 무인 자동차 자회사 웨이모의 지난해 상업용 운행 기록(약 70만 건)을 넘어섰다.<br><br>
             우한시가 바이두, 샤오미 등에 발급한 자율주행 테스트 차량 번호판은 약 2000개이며, 바이두와 둥펑웨샹 등 2곳엔 상업용 자율주행 차량(로보택시, 무인버스) 면허도 내줬다. 연간 이용 승객은 90만 명에 육박한다. 중국의 자율주행 개방도로는 모두 2만2000㎞에 달하며, 이 중 우한에서만 3378㎞가 자율주행차에 열려 있다.<br><br>
