--- a/AI_News.html
+++ b/AI_News.html
@@ -150,6 +150,33 @@
     <ul>
         <li>
           <p>
+            <strong><h2>2024년 4월은 AI와 로봇공학 분야에서 괄목할 만한 발전이 있었다.</h2></strong>
+            <br><br>
+            <div class="gif-container">
+              <!-- <img src="../../image/ai_news/ai news sub 20240505_01.jpg" alt="" width="100%"> -->
+              
+            </div>
+            2024년 4월은 AI와 로봇공학 분야에서 괄목할 만한 발전이 있었던 달이었습니다. 먼저 Boston Dynamics의 새로운 휴머노이드 로봇이 공개되어 큰 주목을 받았는데요, 이 로봇은 이전 모델인 Atlas보다 한층 업그레이드된 버전입니다. 360도 회전이 가능한 관절과 부드러운 움직임이 특징인 이 로봇은 계단 오르기, 물체 들어올리기 등 복잡한 동작을 자연스럽게 해내는 모습을 보여주었습니다.<br><br>
+            또한 중국 우한에서는 자율주행 시범도시 프로젝트가 한창인데요, 최근 세계 최초의 전기구동 휴머노이드 로봇 '탕공'이 공개되어 화제가 되었습니다. 이 로봇은 경사로나 계단 등 다양한 지형에서 안정적인 자율주행이 가능하다고 합니다. 4.75피트 크기에 170파운드 무게로 36개 관절을 가진 탕공은 정교한 시각 및 청각 시스템을 갖추고 사람과 안전하게 상호작용할 수 있도록 설계되었습니다.<br><br>
+            중국의 AI 분야 성과도 눈에 띄었는데요, 특히 대형언어모델 어니봇(Ernie bot)은 여러 벤치마크 평가에서 OpenAI의 GPT-4를 능가하는 결과를 보여주었습니다. 중국어 자연어 처리와 창의력, 추론 능력 등에서 GPT-4를 앞섰고 이미지 생성에서도 사실적인 인물 초상화를 만들어내는 등 뛰어난 성능을 자랑했습니다.<br><br>
+            또 다른 중국 기업 유비테크(UB Tech)에서 개발한 Walker S라는 휴머노이드 로봇도 흥미롭습니다. 이 로봇은 Ernie bot 언어모델과 비전 시스템을 탑재해 옷 개기, 물건 분류와 같은 작업을 완전히 자율적으로 수행할 수 있다고 합니다. 특히 모듈식 설계로 작업에 따라 로봇 핸드를 손쉽게 교체할 수 있어 활용도가 높을 것으로 기대됩니다.<br><br>
+            OpenAI의 Sam Altman CEO는 최근 한 인터뷰에서 인공지능 기술의 미래에 대해 이야기했는데요, 그는 창의력과 비판적 사고력, 타인의 요구사항을 파악하는 능력 등이 앞으로 가장 중요한 스킬이 될 것이라고 강조했습니다.<br><br>
+            또한 Altman은 AGI, 즉 인공일반지능의 도래 시기에 대해서도 언급했습니다. 그는 AGI가 2030년대쯤 등장할 것으로 예상하면서도 정확한 시점을 특정하기는 어렵다고 했습니다. AGI가 실현되더라도 우리의 일상은 크게 달라지지 않을 것이라는 견해도 밝혔습니다.<br><br>
+            한편 Altman은 자사의 GPT-4에 대해서는 "앞으로 우리가 마주하게 될 가장 멍청한 모델"이라고 평가했습니다. 후속 버전인 GPT-5가 훨씬 더 스마트해질 것이라는 뜻인데요, 이는 고무적인 전망이 아닐 수 없습니다.<br><br>
+            Altman은 AI 기술이 고도화될수록 개발에 막대한 비용이 들겠지만 사회에 엄청난 가치를 창출할 수 있기에 투자할 만한 가치가 있다고 역설했습니다. 다만 더 강력해진 AI 시스템을 책임감 있게 개발하고 점진적으로 배포하면서 지속적인 피드백을 반영하는 것이 중요하다고 덧붙였습니다.<br><br>
+            지금까지 2024년 4월 한 달 동안 있었던 주요 AI 및 로봇공학 분야의 혁신과 동향을 살펴보았습니다. 미국과 중국의 경쟁이 치열한 가운데, 이 분야의 발전 속도는 더욱 빨라지고 있습니다. Boston Dynamics나 UB Tech 같은 로봇 기업들은 휴머노이드 로봇의 기술적 한계를 뛰어넘기 위해 노력하고 있고, OpenAI나 Baidu와 같은 AI 선도 기업들은 그들만의 강점을 바탕으로 더욱 뛰어난 언어모델과 멀티모달 AI 시스템을 선보이고 있습니다.<br><br>
+            앞으로 이러한 기술 발전이 우리의 일상과 사회, 경제, 산업 전반에 어떤 변화를 가져올지 주목됩니다. AI와 로봇이 인간의 능력을 확장시키고 한계를 극복하게 해줄 것이라는 긍정적 기대가 있는 반면, 일자리 대체나 프라이버시 침해, 알고리즘 편향성 등에 대한 우려의 목소리도 있습니다.<br><br>
+            분명한 것은 우리가 이 거대한 기술적 전환기를 슬기롭게 헤쳐나가기 위해서는 사회 각계각층의 지혜를 모으고 건설적인 담론을 이어나가야 한다는 점입니다. 학계와 산업계, 정책입안자들과 시민사회가 협력하여 AI와 로봇기술이 가져올 변화에 선제적으로 대비하고 그것이 가진 잠재력을 최대한 활용하면서도 부작용은 최소화하는 방안을 고민해야 할 때입니다. 우리 모두가 이 새로운 미래를 향해 지혜롭게 나아갈 수 있기를 기대해 봅니다.<br><br>
+            <a href="https://www.youtube.com/watch?v=widHHddVPJY" target="_blank">2024년05월04일 : 2024년 4월은 AI와 로봇공학 분야에서 괄목할 만한 발전이 있었다.</a>
+            <br>
+          </p>
+        </li>
+    </ul>
+
+
+    <ul>
+        <li>
+          <p>
             <strong><h2>1억짜리를 150만원에 '뚝딱'…"중국이 해냈다" 업계 화들짝</h2></strong>
             <br><br>
             <div class="gif-container">
@@ -165,26 +192,8 @@
             <br>
           </p>
         </li>
-        <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
-      </ul>
-      <script>
-        const gifContainer = document.querySelector('.gif-container');
-        const gifImage = gifContainer.querySelector('img');
-      
-        gifContainer.addEventListener('click', () => {
-          if (gifImage.style.animationPlayState === 'paused') {
-            gifImage.style.animationPlayState = 'running';
-          } else {
-            gifImage.style.animationPlayState = 'paused';
-          }
-        });
-      </script>
-      <style>
-        .gif-container {
-          display: inline-block;
-          cursor: pointer;
-        }
-      </style>
+    </ul>
+
 
 
 
