--- a/python.html
+++ b/python.html
@@ -4,10 +4,9 @@
 <head>
 
 
-<meta charset="utf-8"/>
-<title>
-    파이선
-  </title>
+    <meta charset="utf-8"/>
+    <title>파이썬 코드 - 유튜브 자동화를 위한 파이썬 스크립트 모음</title>
+    <meta name="description" content="유튜브 동영상 다운로드, 자막 추출, 동영상 포맷 변환 등 유튜브 자동화에 유용한 파이썬 스크립트를 소개합니다. 프로그래밍 초보자도 쉽게 따라할 수 있는 예제 코드를 제공합니다.">
 
   <style>
     body {
@@ -124,9 +123,12 @@
 
 <section>
     <ul>
-        
+        <h2>유튜브 자동화를 위한 파이썬 스크립트</h2>
+        <p>파이썬을 활용하여 유튜브 동영상 다운로드, 자막 추출, 포맷 변환 등 다양한 작업을 자동화할 수 있습니다. 아래 예제 코드를 통해 프로그래밍 초보자도 쉽게 유튜브 자동화에 도전해보세요.</p>
 
-        <h3>유튜브</h3>    
+        
+        <a href="python/python sub 0010_Video Quality Reduction.txt" target="_blank">20240505 동영상 화질을 줄여서 파일크기를 줄임   <br>
+        <a href="python/python sub 0009_Video Size Reduction.txt" target="_blank">20240505 동영상 프레임수를 줄여서 파일크기를 줄임   <br>
         <a href="python/python sub 0008_Change from Mov to MP4.txt" target="_blank">20240505 동영상 MOV를 MP4로 변경   <br>
         <a href="python/python sub 0007_Google_Search_Korean.txt" target="_blank">20240501 구글 검색,작성일자,글자수 포함,한글도 가능   <br>
         <a href="python/python sub 0006_Google_Search_English_only.txt" target="_blank">20240430 구글 검색,작성일자,글자수 포함,영어만 가능   <br>            
