--- a/AI_News.html
+++ b/AI_News.html
@@ -153,7 +153,7 @@
             <strong><h2>2024년 4월은 AI와 로봇공학 분야에서 괄목할 만한 발전이 있었다.</h2></strong>
             <br><br>
             <div class="gif-container">
-              <!-- <img src="../../image/ai_news/ai news sub 20240505_01.jpg" alt="" width="100%"> -->
+              <img src="../../image/ai_news/ai news sub 20240505_02.jpg" alt="" width="100%">
               
             </div>
             2024년 4월은 AI와 로봇공학 분야에서 괄목할 만한 발전이 있었던 달이었습니다. 먼저 Boston Dynamics의 새로운 휴머노이드 로봇이 공개되어 큰 주목을 받았는데요, 이 로봇은 이전 모델인 Atlas보다 한층 업그레이드된 버전입니다. 360도 회전이 가능한 관절과 부드러운 움직임이 특징인 이 로봇은 계단 오르기, 물체 들어올리기 등 복잡한 동작을 자연스럽게 해내는 모습을 보여주었습니다.<br><br>
