--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
         }
       </style>
       <div class="notice-box">
-        <p><strong>공지사항</strong></p>
-        <p>브런치 업데이트 했어요.</p>
+        <p><strong></strong></p>
+        <p></p>
       </div>
       <script>
         window.onload = function() {
