--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="sidebar" style="left: 0; transition: left 2s;">
         <div class="sidebar-row">
             <a href="english.html">영어표현</a>
-            <a href="english.html">English</a>
+            <a href="english EN.html">English</a>
         </div>
         <div class="sidebar-row">
             <a href="brunch.html">소소한 일상</a>
