--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="sidebar-row">
             <a href="brunch.html">소소한 일상</a>
-            <a href="brunch.html">Daily Life</a>
+            <a href="brunch EN.html">Daily Life</a>
         </div>
         <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
