--- a/brunch/diary/brunch sub 0001 EN.html
+++ b/brunch/diary/brunch sub 0001 EN.html
@@ -94,7 +94,7 @@
     <style> body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f4; } header { background-color: #333333; color: #fff; text-align: center; padding: 1rem; } main { margin: 2rem auto; max-width: 1200px; padding: 0 1rem; background-color: #fff; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); border-radius: 5px; padding: 2rem; } h1, h2, h3 { margin-bottom: 1rem; } p { margin-bottom: 1.5rem; } ul, ol { margin-bottom: 1.5rem; padding-left: 2rem; } li { margin-bottom: 0.5rem; } .comparison { margin-bottom: 2rem; } .comparison h2 { border-bottom: 1px solid #ccc; padding-bottom: 0.5rem; } .conclusion { margin-top: 2rem; } .section { margin-bottom: 3rem; } .section h2 { border-bottom: 1px solid #ccc; padding-bottom: 0.5rem; } .subsection { margin-left: 2rem; margin-bottom: 2rem; } </style> </head> <body> 
     <header> <h1>Diary Written with AI</h1> </header> 
     <main> 
-        <a class="home-button" href="../../brunch.html"> Go Back to Brunch Page</a>
+        <a class="home-button" href="../../brunch EN.html"> Go Back to Brunch Page</a>
         <br><br>
     <section class="section"> 
         <!-- <img src="image/brunch/babyflower.jpg" alt="" width="100%"> -->
@@ -118,6 +118,6 @@
     In the end, we were able to finish 18 holes after 5 hours, much later than planned. When we tallied the scores, I had shot 10 strokes more than usual. ㅠㅠ
     <img src="../../image/brunch/foxhills.jpg" alt="Fox Hills Classic Golf Course" width="100%">
     But the weather was really nice. A moment to fully enjoy spring after a long time.. Today was another day like this.. </p> 
-    <a class="home-button" href="../../brunch.html"> Go Back to Brunch Page</a>
+    <a class="home-button" href="../../brunch EN.html"> Go Back to Brunch Page</a>
     </body>
     </html>
