--- a/brunch EN.html
+++ b/brunch EN.html
@@ -169,33 +169,33 @@
             </a>
 
     <h3>Don't Trees Have a Natural Beauty Too?</h3>    
-            <a href="brunch/diary/brunch sub 20240426_02.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240426_02 EN.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
                 <img src="image/brunch/20240426 tree.jpg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Wife Drinks Alcohol</h3>    
-            <a href="brunch/diary/brunch sub 20240426_01.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240426_01 EN.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
                 <img src="image/brunch/wine1.png" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
     
             <h3>
         Curious about Golf Ball Interior
         </h3>    
-            <a href="brunch/diary/brunch sub 20240425_03.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240425_03 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
                 <img src="image/brunch/golfballinside1.jpg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
             </a>
 
     <h3>
         Golf Net Feels Deserted
         </h3>    
-            <a href="brunch/diary/brunch sub 20240425_02.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240425_02 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
                 <img src="image/brunch/golfnet1.jpeg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
             </a>
 
     <h3>
         Daughter Came Home
         </h3>    
-            <a href="brunch/diary/brunch sub 20240425_01.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240425_01 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
                 <img src="image/brunch/bluebag1.jpeg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
             </a>
 
