--- a/brunch/diary/brunch sub 0001 EN.html
+++ b/brunch/diary/brunch sub 0001 EN.html
@@ -72,7 +72,7 @@
         }
        
         .home-button {
-        display: inline-block CopyClaude does not have the ability to run the code it generates yet.J계속;
+        display: inline-block ;
     /* text-align: center; /
     justify-content: center;
     padding: 0rem;
