--- a/brunch/diary/brunch sub 20240426_01 EN.html
+++ b/brunch/diary/brunch sub 20240426_01 EN.html
@@ -26,7 +26,7 @@
         background-color: #fff;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 5px;
-        padding: 2 CopyClaude does not have the ability to run the code it generates yet.J계속rem;
+        padding: 2 ;
 }
     h1, h2, h3 {
         margin-bottom: 1rem;
