--- a/brunch EN.html
+++ b/brunch EN.html
@@ -144,27 +144,27 @@
             </a>
 
     <h3>Block the Ant Pathway</h3>    
-            <a href="brunch/diary/brunch sub 20240501_02.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240501_02 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
                 <img src="image/brunch/20240501_tile1.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Almost Fell Off the Roof</h3>    
-            <a href="brunch/diary/brunch sub 20240501_01.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240501_01 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
                 <img src="image/brunch/20240501_roof.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Wife Fixes the Window Screen</h3>    
-            <a href="brunch/diary/brunch sub 20240429_01.html" target="_blank"> Monday, April 29, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240429_01 EN.html" target="_blank"> Monday, April 29, 2024 Diary Go<br><br>
                 <img src="image/brunch/20240429_bug.jpg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Perfect Day for Golfing</h3>    
-            <a href="brunch/diary/brunch sub 20240427_01.html" target="_blank"> Saturday, April 27, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240427_01 EN.html" target="_blank"> Saturday, April 27, 2024 Diary Go<br><br>
                 <img src="image/brunch/20240427_golfcourse.jpeg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Nostalgic Fish-Shaped Bread</h3>    
-            <a href="brunch/diary/brunch sub 20240426_03.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240426_03 EN.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
                 <img src="image/brunch/20240426 fish.jpg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
