--- a/brunch EN.html
+++ b/brunch EN.html
@@ -124,78 +124,78 @@
 <section>
     <ul>
     <h3>Lilac Tree Pruning Makes It Look Bare</h3>    
-            <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> Saturday, May 4, 2024 Diary Go<br><br>
-                <img src="image/brunch/20240504_tree2.png" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
+            <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> Saturday, May 4, 2024 Diary<br><br>
+                <img src="image/brunch/20240504_tree2.png" alt="Wednesday, May 1, 2024 Diary" width="100%">
             </a>
 
     <h3>Eldest Child's University Graduation Day</h3>    
-            <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> Saturday, May 4, 2024 Diary Go<br><br>
-                <img src="image/brunch/20240504_grad2.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
+            <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> Saturday, May 4, 2024 Diary<br><br>
+                <img src="image/brunch/20240504_grad2.jpg" alt="Wednesday, May 1, 2024 Diary" width="100%">
             </a>
 
     <h3>Saving Private Lawn</h3>    
-            <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> Thursday, May 2, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> Thursday, May 2, 2024 Diary<br><br>
                 <img src="image/brunch/20240502_grass.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Our Family's First Car, With Us for Over 10 Years</h3>    
-            <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> Wednesday, May 1, 2024 Diary<br><br>
                 <img src="image/brunch/20240501_ford.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Block the Ant Pathway</h3>    
-            <a href="brunch/diary/brunch sub 20240501_02 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240501_02 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary<br><br>
                 <img src="image/brunch/20240501_tile1.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Almost Fell Off the Roof</h3>    
-            <a href="brunch/diary/brunch sub 20240501_01 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240501_01 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary<br><br>
                 <img src="image/brunch/20240501_roof.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Wife Fixes the Window Screen</h3>    
-            <a href="brunch/diary/brunch sub 20240429_01 EN.html" target="_blank"> Monday, April 29, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240429_01 EN.html" target="_blank"> Monday, April 29, 2024 Diary<br><br>
                 <img src="image/brunch/20240429_bug.jpg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Perfect Day for Golfing</h3>    
-            <a href="brunch/diary/brunch sub 20240427_01 EN.html" target="_blank"> Saturday, April 27, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240427_01 EN.html" target="_blank"> Saturday, April 27, 2024 Diary<br><br>
                 <img src="image/brunch/20240427_golfcourse.jpeg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Nostalgic Fish-Shaped Bread</h3>    
-            <a href="brunch/diary/brunch sub 20240426_03 EN.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240426_03 EN.html" target="_blank"> Friday, April 26, 2024 Diary<br><br>
                 <img src="image/brunch/20240426 fish.jpg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Don't Trees Have a Natural Beauty Too?</h3>    
-            <a href="brunch/diary/brunch sub 20240426_02 EN.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240426_02 EN.html" target="_blank"> Friday, April 26, 2024 Diary<br><br>
                 <img src="image/brunch/20240426 tree.jpg" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Wife Drinks Alcohol</h3>    
-            <a href="brunch/diary/brunch sub 20240426_01 EN.html" target="_blank"> Friday, April 26, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240426_01 EN.html" target="_blank"> Friday, April 26, 2024 Diary<br><br>
                 <img src="image/brunch/wine1.png" alt="Thursday, April 25, 2024 Diary Go" width="100%">
             </a>
     
             <h3>
         Curious about Golf Ball Interior
         </h3>    
-            <a href="brunch/diary/brunch sub 20240425_03 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240425_03 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary<br><br>
                 <img src="image/brunch/golfballinside1.jpg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
             </a>
 
     <h3>
         Golf Net Feels Deserted
         </h3>    
-            <a href="brunch/diary/brunch sub 20240425_02 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240425_02 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary<br><br>
                 <img src="image/brunch/golfnet1.jpeg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
             </a>
 
     <h3>
         Daughter Came Home
         </h3>    
-            <a href="brunch/diary/brunch sub 20240425_01 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+            <a href="brunch/diary/brunch sub 20240425_01 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary<br><br>
                 <img src="image/brunch/bluebag1.jpeg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
             </a>
 
@@ -203,24 +203,24 @@
     Love Between Snake and Mary?
     </h3>
 
-        <a href="brunch/diary/brunch sub 0004 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary Go<br><br>
+        <a href="brunch/diary/brunch sub 0004 EN.html" target="_blank"> Wednesday, April 24, 2024 Diary<br><br>
             <img src="image/brunch/snake.jpeg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
         </a>
 <h3>
     Flower Buds.. Spring Has Come..
     </h3>
-    <a href="brunch/diary/brunch sub 0003 EN.html" target="_blank"> Tuesday, April 23, 2024 Diary Go<br><br>
+    <a href="brunch/diary/brunch sub 0003 EN.html" target="_blank"> Tuesday, April 23, 2024 Diary<br><br>
         <img src="image/brunch/babyflower.jpg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
     </a>
 <h3>
     Samsung Washing Machine Installation 
     </h3>
-<a href="brunch/diary/brunch sub 0002 EN.html" target="_blank"> Monday, April 22, 2024 Diary Go<br><br>
+<a href="brunch/diary/brunch sub 0002 EN.html" target="_blank"> Monday, April 22, 2024 Diary<br><br>
     <img src="image/brunch/washer.jpg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
 </a>
 <h3>
     Golf (Fox Hills Classic)
-<a href="brunch/diary/brunch sub 0001 EN.html" target="_blank"> Sunday, April 21, 2024 Diary Go<br><br>
+<a href="brunch/diary/brunch sub 0001 EN.html" target="_blank"> Sunday, April 21, 2024 Diary<br><br>
     <img src="image/brunch/foxhills.jpg" alt="Wednesday, April 24, 2024 Diary Go" width="100%">
 </a>
 </ul>
