--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
         <div class="sidebar-row">  
             <a href="python.html">파이선</a>
-            <a href="python.html">Python</a>
+            <a href="python EN.html">Python</a>
         </div>
         <div class="sidebar-row">
             <a href="vba.html">엑셀 VBA</a>
