--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
-            <a href="usa.html">Life in USA</a>
+            <a href="usa EN.html">Life in USA</a>
         </div>
         <div class="sidebar-row">
             <a href="AI_Sites.html">인공지능 사이트</a>
