--- a/brunch EN.html
+++ b/brunch EN.html
@@ -124,22 +124,22 @@
 <section>
     <ul>
     <h3>Lilac Tree Pruning Makes It Look Bare</h3>    
-            <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> Saturday, May 4, 2024 Diary<br><br>
+            <a href="brunch/diary/brunch sub 20240504_02 EN.html" target="_blank"> Saturday, May 4, 2024 Diary<br><br>
                 <img src="image/brunch/20240504_tree2.png" alt="Wednesday, May 1, 2024 Diary" width="100%">
             </a>
 
     <h3>Eldest Child's University Graduation Day</h3>    
-            <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> Saturday, May 4, 2024 Diary<br><br>
+            <a href="brunch/diary/brunch sub 20240504_01 EN.html" target="_blank"> Saturday, May 4, 2024 Diary<br><br>
                 <img src="image/brunch/20240504_grad2.jpg" alt="Wednesday, May 1, 2024 Diary" width="100%">
             </a>
 
     <h3>Saving Private Lawn</h3>    
-            <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> Thursday, May 2, 2024 Diary<br><br>
+            <a href="brunch/diary/brunch sub 20240502_01 EN.html" target="_blank"> Thursday, May 2, 2024 Diary<br><br>
                 <img src="image/brunch/20240502_grass.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
     <h3>Our Family's First Car, With Us for Over 10 Years</h3>    
-            <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> Wednesday, May 1, 2024 Diary<br><br>
+            <a href="brunch/diary/brunch sub 20240501_03 EN.html" target="_blank"> Wednesday, May 1, 2024 Diary<br><br>
                 <img src="image/brunch/20240501_ford.jpg" alt="Wednesday, May 1, 2024 Diary Go" width="100%">
             </a>
 
