--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
         <div class="sidebar-row">
             <a href="AI_News.html">인공지능 뉴스</a>  
-            <a href="AI_News.html">AI News</a>
+            <a href="AI_News EN.html">AI News</a>
         </div>
         <div class="sidebar-row">
             <a href="fortune.html">운세</a>
