--- a/brunch.html
+++ b/brunch.html
@@ -111,6 +111,7 @@
     overflow: hidden;
     background-color: #f1f1f1; /* 배경색 변경 */
     color: #333; /* 글자색 변경 */
+    font-size: 1.5em; /* 글자 크기를 50% 크게 설정 */
     }
     .title-container ul {
         list-style-type: none;
