--- a/brunch.html
+++ b/brunch.html
@@ -178,9 +178,9 @@
         <li><a href="#title6">골프 네트가 썰렁하다.</a></li>
         <li><a href="#title5">딸이 집에 왔다</a></li>
         <li><a href="#title4">뱀과 메리의 사랑?</a></li>
-        <li><a href="#title3">뱀과 메리의 사랑?</a></li>
-        <li><a href="#title2">뱀과 메리의 사랑?</a></li>
-        <li><a href="#title1">뱀과 메리의 사랑?</a></li>
+        <li><a href="#title3">꽃봉우리.. 봄이다..</a></li>
+        <li><a href="#title2">삼성 세탁기 설치</a></li>
+        <li><a href="#title1">골프 (Fox Hills Classic)</a></li>
       </ul>
       <button class="show-all-button">전체보기</button> <!-- 전체보기 버튼 추가 -->
     </div>
