--- a/brunch.html
+++ b/brunch.html
@@ -169,6 +169,7 @@
     <h1>인공지능과 함께 쓰는 일기</h1>
     <div class="title-container">
       <ul>
+        <li><a href="#title19">손상된 데크 페인트를 벗겨내다.</a></li>
         <li><a href="#title18">라일락나무 가지치기를 했더니 앙상해졌다.</a></li>
         <li><a href="#title17">큰애 대학교 졸업식이 있는 날이다</a></li>
         <li><a href="#title16">잔디 일병 구하기</a></li>
@@ -199,7 +200,12 @@
 
 
 
-
+        <li id="title19">
+          <h3>손상된 데크 페인트를 벗겨내다.</h3>    
+                  <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월07일 화요일 일기 바로가기<br><br>
+                      <img src="image/brunch/20240507_deck1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                  </a>
+              </li>
 
         <li id="title18">
         <h3>라일락나무 가지치기를 했더니 앙상해졌다.</h3>    
