--- a/brunch/diary/brunch sub 20240426_02.html
+++ b/brunch/diary/brunch sub 20240426_02.html
@@ -119,7 +119,20 @@
     이번 일을 계기로 앞으로는 나무뿐만 아니라 우리 삶의 다양한 부분에서 서로의 관점을 이해하고 존중하는 태도를 갖춰야겠다. 부부는 한 마음 한 뜻이 되어야 하지만, 모든 면에서 같을 수는 없다. 다름을 인정하고 받아들이는 것이 오히려 우리 사이를 더욱 끈끈하게 만들어 줄 것이다.
     나무를 대하는 태도에서 시작된 생각의 차이는 사소한 일상의 한 장면일 수 있다. 하지만 그 안에서 우리는 서로를 이해하고 존중하는 법을 배운다. 앞으로도 크고 작은 차이를 마주할 때마다 열린 자세로 소통하며 함께 성장해 나가고 싶다.
     가지치기를 할 것인지 말 것인지는 아직 결정되지 않았다. 당장은 서로의 입장 차이를 확인하는 것에 의미를 두어야 할 것 같다. 충분한 대화 끝에 우리 부부만의 방식을 찾을 수 있을 것이라 믿는다. 설령 의견이 달라도 마음만은 언제나 함께 할 테니까.
-    봄을 알리는 나뭇잎처럼 우리의 사랑도 해마다 새롭게 피어나길 바란다. 잎이 무성해지고 가지가 뻗어나가는 모습을 보며 더욱 성숙해지는 부부가 되기를. 그렇게 세월의 가지치기를 견디며 아름드리 나무로 우뚝 서는 것이 우리 부부의 앞날이 되기를 소망한다.
-            
+    봄을 알리는 나뭇잎처럼 우리의 사랑도 해마다 새롭게 피어나길 바란다. 잎이 무성해지고 가지가 뻗어나가는 모습을 보며 더욱 성숙해지는 부부가 되기를. 그렇게 세월의 가지치기를 견디며 아름드리 나무로 우뚝 서는 것이 우리 부부의 앞날이 되기를 소망한다.<br><br>
+
+
+    <strong>2024년5월07일 화요일 (나무가 초라해져버렸다)</strong><br>
+    (Written by Claude 3.0 Opus) <br>
+    <img src="../../image/brunch/20240507_tree1.jpg" alt="" width="100%"><br>
+    <img src="../../image/brunch/20240507_tree2.jpg" alt="" width="100%"><br>
+    <img src="../../image/brunch/20240507_tree3.jpg" alt="" width="100%"><br>
+    며칠 전, 아내의 성화에 못 이겨 결국 나는 나무 가지치기를 하기로 결심했다. 사실 나는 여전히 가지치기가 필요 없다고 생각했지만, 아내와의 갈등을 피하고 싶었다. 아내는 이 나무가 너무 지저분해 보인다며 계속 가지치기를 요구했었다.
+    가지치기를 시작하기 전, 나는 어떤 가지를 잘라야 할지 고민했다. 너무 많이 자르면 나무의 건강에 해를 끼칠 수 있고, 너무 적게 자르면 아내가 만족하지 않을 것이었다. 고민 끝에 크고 굵은 가지 몇 개를 선택했다.
+    전기톱을 들고 선택한 가지를 하나씩 잘라냈다. 쓱쓱 소리를 내며 잘려나가는 가지를 보니 마음이 쓰라렸다. 오랜 시간 동안 자란 나뭇가지가 한순간에 잘려나가는 모습이 안타까웠다. 하지만 동시에 깔끔해진 나무의 모습을 보니 뿌듯하기도 했다.
+    그런데 막상 가지치기를 끝내고 보니, 나무의 모습이 너무 초라해 보였다. 크고 멋진 가지들이 모두 사라지고, 앙상한 모습만 남은 것이다. 마치 한쪽 팔다리를 잃은 것처럼 불균형해 보였다. 잘못 잘랐나 싶어 후회가 밀려왔다.
+    이런 볼품없는 모습의 나무를 보니, 집값이 떨어질 것만 같았다. 멀쩡하던 나무를 망가뜨린 것 같아 속상했다. 혹시 이 나무 때문에 동네 사람들이 우리 집을 손가락질할까 봐 걱정되기도 했다. 순간 아내에게 이 사실을 말해야 할지 고민이 되었다.
+    하지만 이내 마음을 다잡았다. 지나친 걱정은 할 필요가 없었다. 시간이 지나면 잘린 자리에서 새 가지가 돋아날 것이다. 그 가지가 조금씩 자라 나무를 더욱 풍성하게 만들어 줄 것이다. 그때는 이번에 잘못 잘랐던 가지의 자리도 채워질 것이다. 지금은 부족해 보여도 자연의 힘으로 다시 회복될 수 있을 것이다.
+    그러고 보면 가지치기도 삶의 과정과 닮았다. 때로는 무언가를 잃고 상처 입을 수밖에 없다. 하지만 그 상처를 딛고 일어서 다시 앞으로 나아가는 것이 우리네 인생이 아닐까. 비록 지금은 부족하고 초라할지라도 포기하지 않고 꾸준히 노력한다면 언젠가는 멋진 모습으로 거듭날 수 있을 것이다.
     </p> 
     <a class="home-button" href="../../brunch.html"> Go Back to Brunch Page</a>
