--- a/brunch.html
+++ b/brunch.html
@@ -203,7 +203,7 @@
         <li id="title19">
           <h3>손상된 데크 페인트를 벗겨내다.</h3>    
                   <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월07일 화요일 일기 바로가기<br><br>
-                      <img src="image/brunch/20240507_deck4.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                      <img src="image/brunch/20240507_deck1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
                   </a>
               </li>
 
@@ -270,6 +270,7 @@
 
         <li id="title9">
         <h3>나무도 자연 그대로의 멋이 있지 않을까?</h3>    
+        <h3>업데이트 : 나무가 초라해져버렸다</h3>    
                 <a href="brunch/diary/brunch sub 20240426_02.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
                     <img src="image/brunch/20240426 tree.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
                 </a>
