--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       </style>
     </head>
     <body>
-    <img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw; z-index: -1;"/>
+    <!-- <img id="randomImage" src="" style="height: 130vh; width: 130vw; object-fit: cover; position: absolute; top: -15vh; left: -15vw; z-index: -1;"/> -->
+    <img id="randomImage" src="" style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: -1;"/>
     <!DOCTYPE html>
     <html lang="ko">
     <meta charset="utf-8"/>
