--- a/python.html
+++ b/python.html
@@ -5,8 +5,8 @@
 
 
     <meta charset="utf-8"/>
-    <title>파이썬 코드 - 유튜브 자동화를 위한 파이썬 스크립트 모음</title>
-    <meta name="description" content="유튜브 동영상 다운로드, 자막 추출, 동영상 포맷 변환 등 유튜브 자동화에 유용한 파이썬 스크립트를 소개합니다. 프로그래밍 초보자도 쉽게 따라할 수 있는 예제 코드를 제공합니다.">
+    <title>유튜브 자동화를 위한 파이썬 스크립트 모음 - 초보자용 예제 코드 제공</title>
+    <meta name="description" content="프로그래밍 초보자도 쉽게 따라할 수 있는 파이썬 스크립트 예제 코드를 통해 유튜브 동영상 다운로드, 자막 추출, 동영상 포맷 변환 등 유튜브 자동화 기능을 배워보세요.">
 
   <style>
     body {
@@ -126,7 +126,8 @@
         <h2>유튜브 자동화를 위한 파이썬 스크립트</h2>
         <p>파이썬을 활용하여 유튜브 동영상 다운로드, 자막 추출, 포맷 변환 등 다양한 작업을 자동화할 수 있습니다. 아래 예제 코드를 통해 프로그래밍 초보자도 쉽게 유튜브 자동화에 도전해보세요.</p>
 
-        
+        <a href="python/python sub 0013_Image_Type_Change.txt" target="_blank">20240508 이미지 타입을 변경하는 기능   <br>
+        <a href="python/python sub 0012_Image_Size_Reduction.txt" target="_blank">20240508 이미지의 화질을 줄여주는 기능   <br>        
         <a href="python/python sub 0011_Combine_Txt_Files.txt" target="_blank">20240506 Txt파일들을 여러개 합쳐서 하나의 txt파일로 만듬   <br>
         <a href="python/python sub 0010_Video Quality Reduction.txt" target="_blank">20240505 동영상 화질을 줄여서 파일크기를 줄임   <br>
         <a href="python/python sub 0009_Video Size Reduction.txt" target="_blank">20240505 동영상 프레임수를 줄여서 파일크기를 줄임   <br>
