--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
             <a href="brunch EN.html">Daily Life</a>
         </div>
         <div class="sidebar-row">
+            <a href="pamyo.html">영화 파묘 2탄</a>
+            <a href="pamyo EN.html">Exhumation</a>
+        </div>
+        <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
             <a href="usa EN.html">Life in USA</a>
         </div>
